[gd_scene load_steps=14 format=3 uid="uid://crmvnpt4qmhwa"]

[ext_resource type="Script" uid="uid://duau0qowejgwb" path="res://scripts/boss_door.gd" id="1_3wcto"]
[ext_resource type="Texture2D" uid="uid://dctq7g00cae8u" path="res://assets/boss_door.png" id="2_mye3x"]
[ext_resource type="Texture2D" uid="uid://5yrl041ipd6i" path="res://assets/door.png" id="3_wtjks"]
[ext_resource type="AudioStream" uid="uid://brwp5ud8fp67h" path="res://assets/sounds/806104__dragon20c__inserting_key_4.ogg" id="4_mye3x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvuuv"]
atlas = ExtResource("2_mye3x")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_83dcw"]
atlas = ExtResource("3_wtjks")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_la1wf"]
atlas = ExtResource("3_wtjks")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_18pbm"]
atlas = ExtResource("3_wtjks")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5w8r"]
atlas = ExtResource("3_wtjks")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t58dd"]
atlas = ExtResource("3_wtjks")
region = Rect2(160, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6twi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvuuv")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83dcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18pbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5w8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t58dd")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2evs"]
size = Vector2(5, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lk2uw"]
size = Vector2(80, 67)

[node name="BossDoor" type="StaticBody2D"]
script = ExtResource("1_3wcto")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s6twi")
animation = &"closed"
autoplay = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13.5, -2)
shape = SubResource("RectangleShape2D_d2evs")

[node name="OpeningArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpeningArea"]
position = Vector2(-24, -1.5)
shape = SubResource("RectangleShape2D_lk2uw")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mye3x")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="OpeningArea" to="." method="_on_opening_area_body_entered"]
